upload data 23 nov 23 11

--- a/DataCollectingCode/ExtractTextFromPDF.ipynb
+++ b/DataCollectingCode/ExtractTextFromPDF.ipynb
@@ -3,10 +3,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f3e2d5b",
+   "id": "598da551",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PyPDF2 import PdfReader \n",
+    "import PyPDF2\n",
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5941cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory_path = '/Users/williamnehemia/Documents/Skripsi/TugasAkhir/DataPaper'\n",
+    "\n",
+    "files = os.listdir(directory_path)\n",
+    "files_new = []\n",
+    "\n",
+    "for file in files:\n",
+    "    if '.pdf' in file:\n",
+    "        files_new.append(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43426b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyPDF2\n",
+    "for file in files_new:\n",
+    "    reader = PdfReader('/Users/williamnehemia/Documents/Skripsi/TugasAkhir/DataPaper/Physical Sciences and Engineering/' + file)\n",
+    "    pages = reader.numPages\n",
+    "    \n",
+    "    text = \"\"\n",
+    "    for page in range(0, pages):\n",
+    "        text += reader.pages[page].extract_text()\n",
+    "    \n",
+    "    print(text)\n",
+    "    print(\"----------------------------------------------------------------------------------------------\")"
+   ]
   }
  ],
  "metadata": {
