upload data 23 nov 23 12

--- a/DataCollectingCode/ExtractTextFromPDF.ipynb
+++ b/DataCollectingCode/ExtractTextFromPDF.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598da551",
+   "id": "954b9b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba5941cc",
+   "id": "69574c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43426b36",
+   "id": "25fff208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
     "    for page in range(0, pages):\n",
     "        text += reader.pages[page].extract_text()\n",
     "    \n",
-    "    print(text)\n",
-    "    print(\"----------------------------------------------------------------------------------------------\")"
+    "    with open('readme.txt', 'w') as f:\n",
+    "    f.write('readme')"
    ]
   }
  ],
