upload data 23 nov 23 13

--- a/DataCollectingCode/ExtractTextFromPDF.ipynb
+++ b/DataCollectingCode/ExtractTextFromPDF.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "954b9b76",
+   "execution_count": 1,
+   "id": "c2b44886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69574c5b",
+   "id": "82c319f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,21 +33,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25fff208",
+   "id": "53e19223",
    "metadata": {},
    "outputs": [],
    "source": [
     "# PyPDF2\n",
     "for file in files_new:\n",
-    "    reader = PdfReader('/Users/williamnehemia/Documents/Skripsi/TugasAkhir/DataPaper/Physical Sciences and Engineering/' + file)\n",
+    "    reader = PdfReader('/Users/williamnehemia/Documents/Skripsi/TugasAkhir/DataPaper' + file)\n",
     "    pages = reader.numPages\n",
     "    \n",
     "    text = \"\"\n",
     "    for page in range(0, pages):\n",
     "        text += reader.pages[page].extract_text()\n",
     "    \n",
-    "    with open('readme.txt', 'w') as f:\n",
-    "    f.write('readme')"
+    "    with open('/Users/williamnehemia/Documents/Skripsi/TugasAkhir/DataPaperExtracted' + file + \".txt\", 'w') as f:\n",
+    "    f.write(text)"
    ]
   }
  ],
