--- a/DataCollectingCode/EksplorasiTools.ipynb
+++ b/DataCollectingCode/EksplorasiTools.ipynb
@@ -31,17 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1dd4190e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['be', 'traced', 'on', 'an', 'image', 'sum', 'based', 'on', 'renal', 'function', '.', 'the', 'roi', 'must', 'be', 'larger', 'than', 'the', 'renal', 'contour', 'of', 'one', 'pixel', 'to', 'obtain', 'all', 'the', 'informations', 'existing', 'in', 'the', 'renal', 'region', '.', 'in', 'our', 'study', ',', 'we', 'propose', 'to', 'use', 'the', 'points', 'of', 'interest', 'spatial', 'and', 'temporal', 'detection', 'of', 'the', 'initialization', 'of', 'the', 'contour', 'and', 'we', 'also', 'propose', 'to', 'use', 'a', 'multiagent', 'system', 'to', 'accelerate', 'this', 'approach', '.', 'semi-automatic', 'approach', ':', 'the', 'methods', 'using', 'this', 'approach', 'permit', 'drawing', 'the', 'renal', 'roi', 'starting', 'from', 'an', 'initialisation', 'point', '.', 'in', 'y.aribi', 'et', 'al', 'explained', 'the', 'different', 'modules', 'used', 'in', 'their']\n"
+     ]
+    }
+   ],
    "source": [
     "# Mengambil text yang disimpan\n",
     "import nltk\n",
     "text = \"\"\n",
     "with open('/Users/williamnehemia/Documents/Skripsi/TugasAkhir/data.txt', 'r') as file:\n",
     "    text = file.read()\n",
-    "text_tokenize = nltk.word_tokenize(text)"
+    "text_tokenize = nltk.word_tokenize(text)\n",
+    "print(text_tokenize[0:100])"
    ]
   },
   {
